# nsg-gui

./: .gitignore  README.md  credentials.example.json  showcase.sh
.github/workflows/: release.yml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/lib/: tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
