[package]
name = "nsg-gui"
version = "0.1.3"
edition = "2021"
authors = ["Simon Draeger <sdraeger@salk.edu>"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = [] }
tauri-plugin-dialog = "2.4.2"
tauri-plugin-store = "2.4.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2.0.2"
tauri-plugin-process = "2.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
nsg-cli = "0.1.2"
anyhow = "1.0.100"
zip = "6.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
